Liaison à la nouvelle BD et nettoyage du code

--- a/views/css/reponse.css
+++ b/views/css/reponse.css
@@ -9,6 +9,9 @@ table, th, td {
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
 #map {
+	margin-left: 30%;
+	margin-top: 10%;
+  width: 50%;
   height: 100%;
 }
 /* Optional: Makes the sample page fill the window. */
