--- a/views/css/jquery-ui.css
+++ b/views/css/jquery-ui.css
@@ -783,6 +783,7 @@ button.ui-button::-moz-focus-inner {
   margin-top: 10vh;
 }
 .ui-tabs .ui-tabs-nav {
+	background: rgb(159, 104, 29);
 	margin: 0;
 	padding: .2em .2em 0;
 }
@@ -1210,6 +1211,7 @@ body .ui-tooltip {
 .ui-corner-bottom,
 .ui-corner-right,
 .ui-corner-br {
+	background-color: #E29D34;
 	border-bottom-right-radius: 4px;
 }
 
